--- a/deliverycheck/pom.xml
+++ b/deliverycheck/pom.xml
@@ -6,12 +6,12 @@
   <packaging>war</packaging>
   
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
+	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+	<dependency>
+	    <groupId>com.google.code.gson</groupId>
+	    <artifactId>gson</artifactId>
+	    <version>2.8.5</version>
+	</dependency>
     <!-- https://mvnrepository.com/artifact/org.json/json -->
 	<dependency>
 	    <groupId>org.json</groupId>
@@ -30,12 +30,6 @@
 	    <artifactId>javax.servlet-api</artifactId>
 	    <version>3.0.1</version>
 	    <scope>provided</scope>
-	</dependency>
-	<!-- https://mvnrepository.com/artifact/org.webjars.npm/bootstrap -->
-	<dependency>
-	    <groupId>org.webjars.npm</groupId>
-	    <artifactId>bootstrap</artifactId>
-	    <version>5.0.0-alpha1</version>
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
 	<dependency>
